get,put & create endpoints done
