# HolidaysApp-Backend/driving/api-rest/contracts/holidayapp-openapi-v3.yaml
@@ -103,6 +103,55 @@ paths: # Todos los endpoints de la API
                   error:
                     type: string
                     example: Unexpected error occurred
+    put:
+      tags:
+        - Organizations
+      summary: Update an existing organization
+      description: Updates an organization by its ID, which must be included in the request body
+      operationId: updateOrganization
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrganizationDTO'
+      responses:
+        '200':
+          description: Organization updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrganizationDTO'
+        '400':
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Invalid data
+        '404':
+          description: Organization not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: The specified ID does not exist
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Unexpected error occurred
 
   /api-rest/organizations/{organizationId}:
     get:
