# HolidaysApp-Backend/driving/api-rest/src/main/java/com/rob/driving/controllers/adapters/OrganizationControllerAdapter.java
@@ -2,6 +2,7 @@ package com.rob.driving.controllers.adapters;
 
 import com.rob.application.ports.driving.OrganizationServicePort;
 import com.rob.domain.models.Organization;
+import com.rob.driving.dtos.OrganizationCreateDTO;
 import com.rob.driving.mappers.OrganizationDTOMapper;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
@@ -10,6 +11,7 @@ import lombok.AllArgsConstructor;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
@@ -38,16 +40,6 @@ public class OrganizationControllerAdapter implements OrganizationsApi {
 //        System.out.println("Controller loaded!");
 //    }
 
-    @Tag(name = "get", description = "Get all organizations of Organizations APIs")
-    @Operation(operationId = "getAllOrganizations",summary = "Get all organizations", description = "Get all organizations of Organizations APIs")
-    @ApiResponses(value = {
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(responseCode = "200", description = "OK"),
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(responseCode = "400", description = "Wrong Request – invalid parameters"),
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(responseCode = "401", description = "Not authorized – invalid or expired token"),
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(responseCode = "403", description = "Denied – no permission to access the resource"),
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(responseCode = "404", description = "Organization not found"),
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(responseCode = "500", description = "Internal Server Error"),
-    })
     @GetMapping
     public ResponseEntity<List<OrganizationDTO>> getAllOrganizations(@RequestParam(name = "name",required = false) String name) {
         List<OrganizationDTO> organizationsDtos = new ArrayList<>();
@@ -80,4 +72,17 @@ public class OrganizationControllerAdapter implements OrganizationsApi {
         return ResponseEntity.ok(organizationDTOMapper.toOrganizationDTO(organization.get()));
     }
 
+    @PostMapping
+    public ResponseEntity<OrganizationDTO> createOrganization(@Validated @RequestBody OrganizationCreateDTO organizationCreateDTO) {
+        Organization organization = organizationDTOMapper.toOrganization(organizationCreateDTO);
+        Organization createdOrganization = organizationServicePort.createOrganization(organization);
+        return ResponseEntity.ok(organizationDTOMapper.toOrganizationDTO(createdOrganization));
+    }
+
+    @PutMapping()
+    public ResponseEntity<OrganizationDTO> updateOrganization(@Validated @RequestBody OrganizationDTO organizationDTO) {
+        Organization organization = organizationDTOMapper.toOrganization(organizationDTO);
+        Organization updatedOrganization = organizationServicePort.updateOrganization(organization);
+        return ResponseEntity.ok(organizationDTOMapper.toOrganizationDTO(updatedOrganization));
+    }
 }
